# syntech_test_task_short

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: celery.sh  django.sh
src/: manage.py
src/apps/reservations/: admin.py  filters.py  models.py  serializers.py  tasks.py  tests.py  views.py
src/apps/reservations/management/commands/: setuptestdb.py
src/stts/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
